2014-04-18  0.2.0   Add script to generate temporary mkoctfile using gcc other
					than what Octave was built with.

2013-04-07	0.1.2	Fix for Octave < 3.4

2013-03-19	0.1.1	Fix hardcoded /sw 

2013-03-18  0.1.0	Initial release
