@@ -1,0 +1,16 @@
+#!/bin/sh
+osversion=`uname -r | cut -d. -f1`
+case $osversion in
+	1[123]) 
+		COMPILER=@FINKPREFIX@/var/lib/fink/path-prefix-clang/cc ;;
+	10) 
+		COMPILER=@FINKPREFIX@/var/lib/fink/path-prefix-10.6/cc ;;
+	9)  if [ "%m" = "x86_64" ]
+			# use 10.6 gcc-4.2 compiler wrappers on 10.5/x86_64	
+			then COMPILER=@FINKPREFIX@/%p/var/lib/fink/path-prefix-10.6/gcc-4.2,' \
+			# default compilers on on powerpc and i386 build with proper arch.
+			else COMPILER=/usr/bin/gcc-4.2
+		fi ;;
+	*) COMPILER=/usr/bin/false ;; 
+esac
+exec $COMPILER "$@"	
